Add GetUserWithId
